feat: first version of header container

--- a/apps/gauzy/src/app/pages/pages.component.scss
+++ b/apps/gauzy/src/app/pages/pages.component.scss
@@ -16,3 +16,10 @@
 		}
 	}
 }
+.notification-header{
+	background-color: rgb(61, 200, 243);
+	background-image: linear-gradient(to right,white,rgb(61, 200, 243),white);
+	text-align: center;
+	font-weight: 500;
+	align-items: center;
+  }
